--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "canvas2",
+  "name": "canvas",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://vvtu.github.io/canvas/",
+  "homepage": "https://vvtu.github.io/canvas",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
